Move light/dark mode button and fix icon color issue

--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,7 @@ body {
 /* Removes default margin underneith svg elements */
 svg {
   display: block;
+  fill: var(--text-color);
 }
 
 a {
@@ -501,14 +502,6 @@ input[type="file"] {
 
 .settings-section-name {
   font-size: 20px;
-}
-
-.settings-button-container {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  gap: 5px;
-  margin-bottom: 10px;
 }
 
 @keyframes fade-in {
